Refactored ./public/index.js and

--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
 
   <div class="form-group">
     <label>Select your local government</label><br>
-    <select id="locals" class="form-control">
+    <select id="localGov" onchange="viewDetails()"class="form-control">
     </select>
   </div>
 
-  <button class="btn btn-primary rounded-0" onclick="viewDetails()">View</button>
+  <!-- <button class="btn btn-primary rounded-0" onclick="viewDetails()">View</button> -->
 
   <div class="card mt-4">
     <div class="card-header">
